objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address2_Line_1__c</fullName>
        <label>Address2 Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_Line_2__c</fullName>
        <label>Address2 Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3_Line_1__c</fullName>
        <label>Address3 Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City2__c</fullName>
        <label>City2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City3__c</fullName>
        <label>City3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAH_Contact_ID__c</fullName>
        <label>OAH Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAH_Contact_Name__c</fullName>
        <label>OAH Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>Phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone3__c</fullName>
        <label>Phone3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State2__c</fullName>
        <label>State2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State3__c</fullName>
        <label>State3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code2__c</fullName>
        <label>Zip Code2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code3__c</fullName>
        <label>Zip Code3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
</CustomObject>